[package]
name = "collision2d"
version = "0.1.0"
authors = ["sphereflow <johannprescher@gmx.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nalgebra = "0.23"
rand = "0.7"
quickcheck = "0.9"
quickcheck_macros = "0.9"
